# seo-video-slicer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  start.command  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
app-contract/: API.md
backend/: pyproject.toml  requirements-dev.txt  requirements-premium.txt  requirements.txt
backend/app/: budget.py  cli.py  config.py  erase.py  errors.py  jobs.py  loop_export.py  main.py  management.py  packager.py  share.py  slice_cli.py  slicing.py
backend/app/mcp/: README.md  __init__.py  __main__.py  server.py
backend/tests/: conftest.py  test_budget.py  test_convert_frames.py  test_loop_export_guard.py  test_max_width.py  test_mcp_server.py  test_packager_modes.py  test_pipeline.py  test_security.py  test_share.py  test_slice_cli.py
docs/: remotion-recipe.md
docs/code-reviews/: codex-pr6-remotion-companion-review-2026-06-02.md  codex-remotion-companion-playground-review-2026-06-02.md
docs/plans/: implementation-plan.md  remotion-companion-kickoff.md
docs/playgrounds/specs/: remotion-companion-spec.html  seo-video-slicer-architecture.html
docs/specs/: max-width-web-weight-lever.md  remotion-companion-spec.md  seo-video-slicer-spec.md
example/sample-package/: PROMPT.md  README.md  index.html  manifest.json
examples/remotion/: Makefile  README.md  package.json  remotion.config.ts  tsconfig.json
examples/remotion/src/: HeroLoop.tsx  Root.tsx  index.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
package-contract/: CONTRACT-loop.md  CONTRACT.md  build_package.mjs  index.template.html  index.template.loop.html  test-kernel.mjs  verify.mjs
scripts/: build-wheel.sh
site/: index.html
(+29 files in other folders)
